--- a/src/pages/Adm/Coordenacao/Usuarios/usuarios.module.css
+++ b/src/pages/Adm/Coordenacao/Usuarios/usuarios.module.css
@@ -3,7 +3,7 @@
   background-size: cover;
   min-height: 100vh;
   padding: 2rem;
-  padding-top: 20px;
+  padding-top: 0;
   position: relative;
 }
 
@@ -25,7 +25,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0;
-  margin-top: 20px;
+  margin-top: 32px;
   background: rgba(255, 255, 255, 0.1);
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 20px;
@@ -53,7 +53,7 @@
   font-size: 2rem;
   font-weight: bold;
   color: white;
-  margin-top: 55px;
+  margin-top: 35px;
   margin-bottom: 2rem;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
